--- a/main.css
+++ b/main.css
@@ -2,15 +2,10 @@ html, body{
 	height:  97%;
 }
 
-@import url(//db.onlinewebfonts.com/c/bcd0c9bdcf29c2dd630785c724469553?family=Verlag+Book);
-
-@font-face {font-family: "Verlag Book"; src: url("//db.onlinewebfonts.com/t/bcd0c9bdcf29c2dd630785c724469553.eot"); src: url("//db.onlinewebfonts.com/t/bcd0c9bdcf29c2dd630785c724469553.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/bcd0c9bdcf29c2dd630785c724469553.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/bcd0c9bdcf29c2dd630785c724469553.woff") format("woff"), url("//db.onlinewebfonts.com/t/bcd0c9bdcf29c2dd630785c724469553.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/bcd0c9bdcf29c2dd630785c724469553.svg#Verlag Book") format("svg"); }
-
-
 body {
 	text-align: left; 
 	padding: 0;
-	font-family: Verlag Book;
+	font-family: Verlag;
 	font-size: 2vw;
 	background-image: url('https://drive.google.com/uc?id=1hdnBwxYVYDom1wsCf9jElloss1pOIxKi');
 	background-size: contain;
@@ -28,12 +23,12 @@ h1 {
 	position: relative; 
 	margin-top: 35px; 
 	margin-left: 22px;
-	font-family: Verlag Book
+	font-family: Verlag;
 }
 ul {
 	text-align:left;
 	margin-left: 22px;
-	font-family: Verlag Book;
+	font-family: Verlag;
 	list-style-type: none;
 	padding: 0px;	
 	margin-right: 40vw; 
@@ -43,7 +38,7 @@ ul {
 mark span {
 	color:  white; 
 	background-color: #7f7f7f; 
-	font-family: Verlag Book; 
+	font-family: Verlag; 
 	text-align: left;
 }
 
@@ -70,13 +65,13 @@ mark span {
 	}
 	h1{
 		margin-left: 0px;
-		top:  5px;
+		margin-top: 0px;
 		left: 0px;
 		padding: 0;
 		font-size: 14.5vw;
 		text-align: center;
 		margin-top: 0px; 
-		font-family: Verlag Book;
+		font-family: Verlag;
 	}
 	background-image { display: none; }
 	    }
