--- a/reportstyle.css
+++ b/reportstyle.css
@@ -25,10 +25,12 @@ mark {
 @media screen and (max-width: 576px){
 	h1{
 		font-size: 14.5vw;
+		line-height: 110%;
+		margin-top: 0px;
 	}
 	body {
 	text-align: left;
-	margin-right: 2px; margin-left: 2px; font-size: 6vw;
+	margin-right: 10px; margin-left: 10px; font-size: 5vw;
 	    }
 }
 
